--- a/listasAnidadas.html
+++ b/listasAnidadas.html
@@ -29,7 +29,7 @@
                 <li>ReactJs</li>
             </ul>
         </li>
-        <li>Backend
+        <li>Backend:
             <ul>
                 <li>NodeJs</li>
                 <li>Bases de datos</li>
@@ -37,7 +37,8 @@
         </li>
     </ol>
 
-
+    <h2>Modalidad de cursada</h2>
+    
     <ul>
         <li><h3>Contenidos en vivo:</h3>
             <ul>
