--- a/Formularios.html
+++ b/Formularios.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Formulario de registro</h1>
 
+    <form>
     <label for="nombre">Nombre:</label>
     <input type="text" id="nombre">
 
@@ -21,34 +22,34 @@
     <br>
 
     Modalidad de Cursada:
-    <label for="checkbox">On-Demand</label>
-    <input type="radio">
+    <input type="radio" name="modalidad" id="ondemand">
+    <label for="ondemand">On-Demand</label>
+    <input type="radio" name="modalidad" id="vivo">
+    <label for="vivo">En vivo</label>
+    
+    <br>
+    <br>
 
-
-    <label for="checkbox">En vivo</label>
-    <input type="radio">
+    <label for="mail">Correo:</label>
+    <input type="email" id="mail">
 
     <br>
     <br>
 
-    <label for="Correo">Correo:</label>
-    <input type="email" id="Correo">
+    <input type="checkbox" id="info">
+    <label for="info">Deseo recibir información sobre nuevos posteos en la plataforma de Nucba.</label>
 
     <br>
     <br>
 
-    <input type="checkbox" id="checkbox">
-    <label for="checkbox">Deseo recibir información sobre nuevos posteos en la plataforma de Nucba.</label>
+    <input type="checkbox" id="terminos">
+    <label for="terminos">Declaro que lei los terminos y condiciones y estoy listo para convertirme en desarrollador web full stack.</label>
 
     <br>
     <br>
-
-    <input type="checkbox" id="checkbox">
-    <label for="checkbox">Declaro que lei los terminos y condiciones y estoy listo para convertirme en desarrollador web full stack.</label>
-
-    <br>
-    <br>
-
-    <input type="submit" id="submit">
+    
+    <button type="submit">Enviar</button>
+    <input type="submit" value="Enviar">
+    </form>
 </body>
 </html>
